<resources>
    <string name="app_name">Spotify Streamer</string>

    <!-- Titles -->
    <string name="title_activity_tracks">Top 10 Tracks</string>

    <!-- Menu Items -->
    <string name="action_settings">Settings</string>
    <string name="pref_location_label">Country</string>

    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- Labels for location preference [CHAR LIMIT=25] -->
    <string name="pref_location_label_us">United States</string>
    <string name="pref_location_label_ca">Canada</string>

    <!-- Country code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_location_default" translatable="false">US</string>
    <string name="pref_location_us" translatable="false">US</string>
    <string name="pref_location_ca" translatable="false">CA</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Play Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- Generic constants -->
    <string name="artist_hint">Search for your Favorite Music Artist!</string>

    <!-- 508 -->
    <string name="album_image_description">Album Cover</string>

    <!-- Error messages -->
    <string name="no_artist_results">No artist(s) found. Please refine your search.</string>
    <string name="no_track_results">No track(s) found. Please choose another artist.</string>
</resources>
